--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         <div id="row2">
             <div id="row2-section1">
                 <!-- JORDAN 2 IMAGE HERE -->
-              <img src="https://cdn.flightclub.com/TEMPLATE/011923/1.jpg" alt="Jordan 2" height="400px" width="600px" id="jordan-2"/>  
+              <img src="https://cdn.flightclub.com/TEMPLATE/011923/1.jpg" 
+              alt="Jordan 2" 
+              height="400px" 
+              width="600px" 
+              id="jordan-2"/>  
 
 
 
